# Granter-2.0

./: .env.example  .gitignore  AGENTS.md  AGENTS_CUSTOMIZADO_GRANTER.md  CONVENTIONS_FRONTEND.md  DEPLOYMENT.md  HOW_TO_RUN.md  Makefile  PROJECT_COMPLETION_SUMMARY.md  README.md  SESSION_NOTES.md  SPRINT_2_FINAL_REPORT.md  SPRINT_2_STATUS.md  SPRINT_3_FINAL_REPORT.md  SPRINT_4_DEPLOYMENT_RUNBOOK.md  SPRINT_4_GO_LIVE_GUIDE.md  SPRINT_4_SECURITY_CHECKLIST.md  SPRINT_4_SMOKE_TESTS.md  docker-compose.yml  package-lock.json  package.json  start.sh  stop.sh  turbo.json
.github/workflows/: test.yml
REBOOT/: 00_CONCLAVE_MCP_RECOMENDACION_FINAL.md  03_PROPUESTA_SEGURIDAD_DESDE_0.md  05_PROPUESTA_FRONTEND_DESDE_0.md  06_ROADMAP_DESARROLLO_DESDE_0.md  AUDITORIA_2026-01-27_RESUMEN_EJECUTIVO_claude.md  INFORME_AUDITORIA_gemini.md
REBOOT/2.0 Reboot Post Dev Reports/: API_REFERENCE.md  INDEX.md  TROUBLESHOOTING_QUICK_FIX.md
REBOOT/2.0 Reboot Post Dev Reports 280126/: TESTING_GUIDE.md
REBOOT/New Dev Proposals/: 00_CONCLAVE_PROPUESTA_FINAL_DESDE_0.md  04_PROPUESTA_TESTING_DESDE_0.md  (+2 more)
apps/data-service/: .coverage  Dockerfile  IA_SERVICE.md  main.py  package.json  pyproject.toml  requirements.txt
apps/data-service/src/models/: __init__.py
apps/data-service/src/routers/: discovery_router.py  ia_router.py
apps/data-service/src/services/: backend_client.py  discovery_service.py  ia_service.py  retry_manager.py
apps/data-service/src/tests/: conftest.py  test_discovery_service.py  test_ia_router.py  test_ia_service.py  test_retry_manager.py
scripts/: smoke-test.sh
(+238 files in other folders)
